--- a/rai_build.yml
+++ b/rai_build.yml
@@ -19,6 +19,6 @@ commands:
 #    - /usr/bin/time python m1.2.py # execute code
 #    - nvprof python m1.2.py # execute code in NVPROF
 #    - python m2.1.py 1000 # execute code
-    - python m3.1.py # execute code
+    - python m3.1.py 10000 # execute code
 #    - /usr/bin/time python m4.1.py # execute code
 #    - /usr/bin/time python final.py # execute code
