--- a/rai_build.yml
+++ b/rai_build.yml
@@ -19,8 +19,8 @@ commands:
 #    - /usr/bin/time python m1.2.py # execute code
 #    - nvprof python m1.2.py # execute code in NVPROF
 #    - python m2.1.py 1000 # execute code
-    - python m4.1.py 100 # execute code
-    - python m4.1.py 1000 # execute code
-    - python m4.1.py 10000 # execute code
+#    - nvprof --kernels "::forward:1" --analysis-metrics -o forward1_analysis_sm_ck_lu.nvprof python m4.1.py 10000
+#    - nvprof --kernels "::forward:2" --analysis-metrics -o forward2_analysis_sm_ck_lu.nvprof python m4.1.py 10000
+#    - python m4.1.py
 #    - /usr/bin/time python m4.1.py # execute code
-#    - /usr/bin/time python final.py # execute code
+    - python final.py # execute code
